[package]
name = "authorization-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
